--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,1 +1,72 @@
-<h1>Employees</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/site.css">
+    <link rel="shortcut icon" type="image/x-icon" href="https://www.sandbox.game/images/favicon.png" />
+    <script src="/js/modernizr-2.6.2.js"></script>
+    <style>
+        body {
+            padding-top: 60px;
+        }
+
+        .hand {
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+<header>
+    <div class="content-wrapper">
+        <img href="https://www.sandbox.game/images/favicon.png" />
+        <br/>
+        <div class="float-right">
+            <div class="float-right">
+                <p class="site-title">Employees</p>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div id="body">
+
+    <section class="content-wrapper main-content clear-fix">
+
+        <section class="featured">
+
+            <div class="content-wrapper">
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>ID</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Position</th>
+                        <th>Supervisor</th>
+                        <th>Assign Supervisor</th>
+                        <th>Delete</th>
+                    </tr>
+                </table>
+            </div>
+        </section>
+
+
+    </section>
+</div>
+
+<footer>
+    <div class="content-wrapper">
+        <div class="float-left">
+            <p>2019 - Anthony Ruffino</p>
+        </div>
+    </div>
+</footer>
+
+<script src="/js/jquery.min.js"></script>
+<script src="/js/angular.min.js"></script>
+</body>
+
+</html>
